<resources>
    <string name="app_name">Project_2</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_image">login_image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="_sign_in">Sign in</string>
</resources>