<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">


    <ImageView
        android:id="@+id/loginImageView"
        android:contentDescription="@string/login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image001" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImageView"
        tools:text="Welcome Back!" />

    <TextView
        android:id="@+id/login_to_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:layout_marginStart="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_80sdp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:minHeight="48dp"
        android:hint="@string/email"
        android:textSize="@dimen/_13ssp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_to_continue"
        android:focusable="true" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:focusable="true"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:textSize="@dimen/_13ssp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13ssp"
        android:text="@string/sign_in"
        android:minHeight="@dimen/_40sdp"
        android:radius="@dimen/_8sdp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="@dimen/_10sdp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/create_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_marginStart="@dimen/_70sdp"
        android:layout_marginEnd="@dimen/_70sdp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_18sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/buttonPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>