<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_13ssp"
    tools:context=".activities.SignUpActivity">

  <TextView
      android:id="@+id/create_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/create_new_account"
      android:textAlignment="center"
      android:textStyle="bold"
      android:textColor="@color/primary_text"
      android:textSize="@dimen/_22sdp"
      android:layout_marginTop="@dimen/_45sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
       />

  <com.makeramen.roundedimageview.RoundedImageView
      android:id="@+id/imageProfile"
      android:layout_width="@dimen/_80sdp"
      android:layout_height="@dimen/_80sdp"
      android:layout_marginTop="@dimen/_25sdp"
      android:src="@drawable/rounded_image"
      android:scaleType="centerCrop"
      app:riv_oval="true"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/create_account"
      />

  <EditText
      android:id="@+id/Name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_16sdp"
      android:minHeight="48dp"
      android:hint="@string/name"
      android:textSize="@dimen/_13ssp"
      android:textStyle="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/imageProfile"
      android:focusable="true" />

  <EditText
      android:id="@+id/Email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_16sdp"
      android:minHeight="48dp"
      android:hint="@string/email"
      android:textSize="@dimen/_13ssp"
      android:textStyle="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/Name"
      android:focusable="true" />


  <EditText
      android:id="@+id/Password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:focusable="true"
      android:hint="@string/password"
      android:minHeight="48dp"
      android:textSize="@dimen/_13ssp"
      android:textStyle="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/Email" />

  <EditText
      android:id="@+id/confirmPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:focusable="true"
      android:hint="@string/confirm_password"
      android:minHeight="48dp"
      android:textSize="@dimen/_13ssp"
      android:textStyle="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/Password" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/buttonPanel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_13ssp"
      android:text="@string/sign_up"
      android:minHeight="@dimen/_40sdp"
      android:radius="@dimen/_8sdp"
      android:textAlignment="center"
      android:textSize="20sp"
      app:cornerRadius="@dimen/_10sdp"
      android:textStyle="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/confirmPassword">

  </com.google.android.material.button.MaterialButton>
  <TextView
      android:id="@+id/textSignIn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/_sign_in"
      android:layout_marginStart="@dimen/_70sdp"
      android:layout_marginEnd="@dimen/_70sdp"
      android:textStyle="bold"
      android:textColor="@color/secondary_text"
      android:textAlignment="center"
      android:layout_marginTop="@dimen/_18sdp"
      android:textSize="@dimen/_12sdp"
      app:layout_constraintTop_toBottomOf="@+id/buttonPanel"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />


</androidx.constraintlayout.widget.ConstraintLayout>